Veretino 0.3.4 (dev)
* Added "Open Recent" menu.
* Minor UI improvements.

Veretino 0.3.3
* Settings and layout are now saved between sessions.
* Added a button to reset default settings.
* Added icons to database items and to the list of file types in the Folder Content analyzer.
* Added the ability to hide some columns (now also for the file system view).
* Now the last path opens on startup (can be enabled in the settings).
* Improved checksum summary file handling.
* Enabled centering of messages and dialog boxes.

Veretino 0.3.2
* Added the ability to create a global Filter based on the Folder Content analyzer.
* It is now possible to quickly create an independent filter as part of a holistic process of checksums handling for a selected folder.
* Improved Settings dialog: the database file name config is now more flexible, added config for enabling/disabling saving the verification datetime.
* Added open/overwrite prompt when detecting an existing database in the folder being processed.
* UI improved, added icons to the Button and menu items.

Veretino 0.3.1
* Added a new universal Database Status dialog. Now information about database changes and verification results are also displayed in this dialog box.
* Added an improved Folder Content analyzer. There is now support for sorting the list of extensions by total size or number of files, as well as filtering the Top10 of the largest or most numerous file types.
* Now the database stores not only the update time, but also the time of the last successful check (when all files from the list are present on the disk and their current checksums have been calculated and match).
* Now the database does not store the WorkDir value unnecessarily.
* Pressing Enter again in the path edit field performs a quick action (compute/verify file's checksum or open database). And in the case of an empty field, there is no unnecessary warning about the wrong path.