@@ -1,6 +1,7 @@
 Veretino 0.3.4 (dev)
-* Added "Open Recent" menu.
-* Minor UI improvements.
+* UI improvements:
+    added "Open Recent" menu,
+    added a process abort prompt if a transition to other actions (or another DB) is requested
 
 Veretino 0.3.3
 * Settings and layout are now saved between sessions.
